--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                 <ul class="navbar-nav ml-auto">
 
                     <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" data-toggle="dropdown" id="navDrop"> 
+                        <a class="nav-link dropdown-toggle" href="#" data-toggle="dropdown" id="navDrop">
                             social
                         </a>
                         <div class="dropdown-menu">
@@ -67,6 +67,67 @@
         </div>
 
     </nav>
+
+    <div class="carousel slide" data-ride="carousel" id="carouselSite">
+
+        <ol class="carousel-indicators">
+            <li data-target="#carouselSite" data-slide-to="0" class="active"></li>
+            <li data-target="#carouselSite" data-slide-to="1"></li>
+            <li data-target="#carouselSite" data-slide-to="2"></li>
+        </ol>
+
+        <div class="carousel-inner">
+
+            <div class="carousel-item active">
+
+                <img src="./img/slide-1.jpg" alt="" class="img-fluid d-block" he>
+
+                <div class="carousel-caption d-none d-md-block">
+                    <h3>Lorem ipsum dolor sit amet.</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam, velit.</p>
+                </div>
+
+            </div>
+
+            <div class="carousel-item">
+
+                <img src="./img/slide-2.jpg" alt="" class="img-fluid d-block">
+
+                <div class="carousel-caption d-none d-md-block">
+                    <h3>Lorem ipsum dolor sit amet.</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam, velit.</p>
+                </div>
+
+            </div>
+
+            <div class="carousel-item">
+
+                <img src="./img/slide-3.jpg" alt="" class="img-fluid d-block">
+
+                <div class="carousel-caption d-none d-md-block">
+                    <h3>Lorem ipsum dolor sit amet.</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam, velit.</p>
+                </div>
+
+            </div>
+
+        </div>
+
+        <a class="carousel-control-prev" href="#carouselSite" role="button" data-slide="prev">
+
+            <span class="carousel-control-prev-icon"></span>
+            <span class="sr-only">Anterior</span>
+
+        </a>
+
+        <a class="carousel-control-next" href="#carouselSite" role="button" data-slide="next">
+
+            <span class="carousel-control-next-icon"></span>
+            <span class="sr-only">Avançar</span>
+
+        </a>
+
+    </div>
 
 
     <script src="node_modules/jquery/dist/jquery.js"></script>
