feature: scrollspy com navegação ativa

--- a/index.html
+++ b/index.html
@@ -82,9 +82,9 @@
 
                 <img src="./img/slide-1.jpg" alt="" class="img-fluid d-block" he>
 
-                <div class="carousel-caption d-none d-md-block">
-                    <h3>Lorem ipsum dolor sit amet.</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam, velit.</p>
+                <div class="carousel-caption d-none d-md-block text-primary">
+                    <h1>Lorem ipsum dolor sit amet.</h1>
+                    <p class="lead">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam, velit.</p>
                 </div>
 
             </div>
@@ -93,9 +93,9 @@
 
                 <img src="./img/slide-2.jpg" alt="" class="img-fluid d-block">
 
-                <div class="carousel-caption d-none d-md-block">
-                    <h3>Lorem ipsum dolor sit amet.</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam, velit.</p>
+                <div class="carousel-caption d-none d-md-block text-primary">
+                    <h1>Lorem ipsum dolor sit amet.</h1>
+                    <p class="lead">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam, velit.</p>
                 </div>
 
             </div>
@@ -104,9 +104,9 @@
 
                 <img src="./img/slide-3.jpg" alt="" class="img-fluid d-block">
 
-                <div class="carousel-caption d-none d-md-block">
-                    <h3>Lorem ipsum dolor sit amet.</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam, velit.</p>
+                <div class="carousel-caption d-none d-md-block text-primary">
+                    <h1>Lorem ipsum dolor sit amet.</h1>
+                    <p class="lead">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam, velit.</p>
                 </div>
 
             </div>
@@ -126,6 +126,88 @@
             <span class="sr-only">Avançar</span>
 
         </a>
+
+    </div>
+
+    <div class="container">
+
+        <div class="row">
+
+            <div class="col-12 my-5 text-center">
+
+                <h1 class="display-3">Lorem, ipsum dolor.</h1>
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing.</p>
+
+            </div>
+
+        </div>
+
+        <div class="row">
+
+            <div class="col-3">
+
+                <nav id="navbarVertical" class="nav navbar-light bg-light">
+
+                    <nav class="nav nav-pills flex-column">
+
+                        <a class="nav-link" href="#item1">Lorem, ipsum.</a>
+
+                        <nav class="nav nav-pills flex-column">
+
+                            <a class="nav-link ml-3" href="#item1-1">Lorem, ipsum.</a>
+
+                            <a class="nav-link ml-3" href="#item1-2">Lorem, ipsum.</a>
+
+                        </nav>
+
+                        <a class="nav-link" href="#item2">Lorem, ipsum.</a>
+
+                        <a class="nav-link" href="#item3">Lorem, ipsum.</a>
+
+                        <nav class="nav nav-pills flex-column">
+
+                            <a class="nav-link ml-3" href="#item3-1">Lorem, ipsum dolor.</a>
+
+                            <a class="nav-link ml-3" href="#item3-2">Lorem, ipsum dolor.</a>
+
+                        </nav>
+
+                    </nav>
+
+                </nav>
+
+            </div>
+
+            <div class="col-9">
+
+                <div data-spy="scroll" data-target="#navbarVertical" data-offset="0" class="scrollspySite">
+
+                    <h4 id="item1">Lorem, ipsum dolor.</h4>
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eaque ratione quam, neque ea assumenda dolores.</p>
+
+                    <h4 id="item1-1">Lorem ipsum dolor sit.</h4>
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nam neque impedit nobis expedita maxime illum voluptas earum dolore similique dignissimos!</p>
+
+                    <h4 id="item1-2">Lorem ipsum dolor sit amet.</h4>
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nisi et porro labore fugit, quibusdam enim delectus vel! Vero nulla itaque in illo quasi quam. Corporis.</p>
+
+                    <h4 id="item2">Lorem ipsum dolor sit amet.</h4>
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nisi et porro labore fugit, quibusdam enim delectus vel! Vero nulla itaque in illo quasi quam. Corporis.</p>
+
+                    <h4 id="item3">Lorem ipsum dolor sit amet.</h4>
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nisi et porro labore fugit, quibusdam enim delectus vel! Vero nulla itaque in illo quasi quam. Corporis.</p>
+
+                    <h4 id="item3-1">Lorem ipsum dolor sit amet.</h4>
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nisi et porro labore fugit, quibusdam enim delectus vel! Vero nulla itaque in illo quasi quam. Corporis. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Magni facere iste sunt molestias laboriosam. Blanditiis sint eum nam facere quia consequuntur quibusdam, atque dicta repellat labore hic incidunt distinctio. Laudantium! Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet, ipsam?</p>
+
+                    <h4 id="item3-2">Lorem ipsum dolor sit amet.</h4>
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nisi et porro labore fugit, quibusdam enim delectus vel! Vero nulla itaque in illo quasi quam. Corporis.</p>
+
+                </div>
+
+            </div>
+
+        </div>
 
     </div>
 
