feature: criando cards completos

--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
 
         <div class="row">
 
-            <div class="col-12 my-5 text-center">
+            <div class="col-12 mt-5 text-center">
 
                 <h1 class="display-3">Lorem, ipsum dolor.</h1>
                 <p>Lorem, ipsum dolor sit amet consectetur adipisicing.</p>
@@ -183,25 +183,135 @@
                 <div data-spy="scroll" data-target="#navbarVertical" data-offset="0" class="scrollspySite">
 
                     <h4 id="item1">Lorem, ipsum dolor.</h4>
-                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eaque ratione quam, neque ea assumenda dolores.</p>
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eaque ratione quam, neque ea assumenda
+                        dolores.</p>
 
                     <h4 id="item1-1">Lorem ipsum dolor sit.</h4>
-                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nam neque impedit nobis expedita maxime illum voluptas earum dolore similique dignissimos!</p>
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nam neque impedit nobis expedita maxime
+                        illum voluptas earum dolore similique dignissimos!</p>
 
                     <h4 id="item1-2">Lorem ipsum dolor sit amet.</h4>
-                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nisi et porro labore fugit, quibusdam enim delectus vel! Vero nulla itaque in illo quasi quam. Corporis.</p>
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nisi et porro labore fugit, quibusdam
+                        enim delectus vel! Vero nulla itaque in illo quasi quam. Corporis.</p>
 
                     <h4 id="item2">Lorem ipsum dolor sit amet.</h4>
-                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nisi et porro labore fugit, quibusdam enim delectus vel! Vero nulla itaque in illo quasi quam. Corporis.</p>
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nisi et porro labore fugit, quibusdam
+                        enim delectus vel! Vero nulla itaque in illo quasi quam. Corporis.</p>
 
                     <h4 id="item3">Lorem ipsum dolor sit amet.</h4>
-                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nisi et porro labore fugit, quibusdam enim delectus vel! Vero nulla itaque in illo quasi quam. Corporis.</p>
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nisi et porro labore fugit, quibusdam
+                        enim delectus vel! Vero nulla itaque in illo quasi quam. Corporis.</p>
 
                     <h4 id="item3-1">Lorem ipsum dolor sit amet.</h4>
-                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nisi et porro labore fugit, quibusdam enim delectus vel! Vero nulla itaque in illo quasi quam. Corporis. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Magni facere iste sunt molestias laboriosam. Blanditiis sint eum nam facere quia consequuntur quibusdam, atque dicta repellat labore hic incidunt distinctio. Laudantium! Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet, ipsam?</p>
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nisi et porro labore fugit, quibusdam
+                        enim delectus vel! Vero nulla itaque in illo quasi quam. Corporis. Lorem ipsum, dolor sit amet
+                        consectetur adipisicing elit. Magni facere iste sunt molestias laboriosam. Blanditiis sint eum
+                        nam facere quia consequuntur quibusdam, atque dicta repellat labore hic incidunt distinctio.
+                        Laudantium! Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet, ipsam?</p>
 
                     <h4 id="item3-2">Lorem ipsum dolor sit amet.</h4>
-                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nisi et porro labore fugit, quibusdam enim delectus vel! Vero nulla itaque in illo quasi quam. Corporis.</p>
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nisi et porro labore fugit, quibusdam
+                        enim delectus vel! Vero nulla itaque in illo quasi quam. Corporis.</p>
+
+                </div>
+
+            </div>
+
+        </div>
+
+        <div class="row mb-5 mt-5">
+
+            <div class="col-sm-4">
+
+                <div class="card">
+
+                    <img class="card-img-top" src="./img/slide-1.jpg">
+
+                    <div class="card-body">
+                        <h4 class="card-title">Lorem, ipsum dolor.</h4>
+                        <h6 class="card-subtitle text-muted mb-2">Lorem, ipsum dolor.</h6>
+                        <p class="card-text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Accusamus, eos.
+                        </p>
+                    </div>
+
+                    <ul class="list-group list-group-flush">
+                        <li class="list-group-item">Lorem, ipsum.</li>
+                        <li class="list-group-item">Lorem, ipsum.</li>
+                        <li class="list-group-item">Lorem, ipsum.</li>
+                    </ul>
+
+                    <div class="card-body">
+                        <a href="#" class="card-link">Lorem, ipsum.</a>
+                        <a href="#" class="card-link">Lorem, ipsum.</a>
+                    </div>
+
+                    <div class="card-footer text-muted">
+                        Lorem, ipsum dolor.
+                    </div>
+
+                </div>
+
+            </div>
+
+            <div class="col-sm-4">
+
+                <div class="card">
+
+                    <img class="card-img-top" src="./img/slide-2.jpg">
+
+                    <div class="card-body">
+                        <h4 class="card-title">Lorem, ipsum dolor.</h4>
+                        <h6 class="card-subtitle text-muted mb-2">Lorem, ipsum dolor.</h6>
+                        <p class="card-text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Accusamus, eos.
+                        </p>
+                    </div>
+
+                    <ul class="list-group list-group-flush">
+                        <li class="list-group-item">Lorem, ipsum.</li>
+                        <li class="list-group-item">Lorem, ipsum.</li>
+                        <li class="list-group-item">Lorem, ipsum.</li>
+                    </ul>
+
+                    <div class="card-body">
+                        <a href="#" class="card-link">Lorem, ipsum.</a>
+                        <a href="#" class="card-link">Lorem, ipsum.</a>
+                    </div>
+
+                    <div class="card-footer text-muted">
+                        Lorem, ipsum dolor.
+                    </div>
+
+                </div>
+
+            </div>
+
+            <div class="col-sm-4">
+
+                <div class="card">
+
+                    <img class="card-img-top" src="./img/slide-3.jpg">
+
+                    <div class="card-body">
+                        <h4 class="card-title">Lorem, ipsum dolor.</h4>
+                        <h6 class="card-subtitle text-muted mb-2">Lorem, ipsum dolor.</h6>
+                        <p class="card-text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Accusamus, eos.
+                        </p>
+                    </div>
+
+                    <ul class="list-group list-group-flush">
+                        <li class="list-group-item">Lorem, ipsum.</li>
+                        <li class="list-group-item">Lorem, ipsum.</li>
+                        <li class="list-group-item">Lorem, ipsum.</li>
+                    </ul>
+
+                    <div class="card-body">
+                        <a href="#" class="card-link">Lorem, ipsum.</a>
+                        <a href="#" class="card-link">Lorem, ipsum.</a>
+                    </div>
+
+                    <div class="card-footer text-muted">
+                        Lorem, ipsum dolor.
+                    </div>
 
                 </div>
 
