--- a/index.html
+++ b/index.html
@@ -305,7 +305,7 @@
                     </ul>
 
                     <div class="card-body">
-                        <a href="#" class="card-link">Lorem, ipsum.</a>
+                        <a href="#" class="card-link" data-toggle="modal" data-target="#siteModal">Lorem, ipsum.</a>
                         <a href="#" class="card-link">Lorem, ipsum.</a>
                     </div>
 
@@ -321,6 +321,51 @@
 
     </div>
 
+    <!-- Modal -->
+
+    <div class="modal fade" id="siteModal" tabindex="-1" role="dialog">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+
+                <div class="modal-header">
+                    <h5 class="modal-title">Lorem, ipsum dolor.</h5>
+                    <button type="button" class="close" data-dismiss="modal">
+                        <span>&times;</span>
+                    </button>
+                </div>
+
+                <div class="modal-body">
+                    <div class="container">
+                        <div class="row">
+                            <div class="col-6">
+                                <img class="img-fluid" src="./img/slide-2.jpg">
+                                <h5>Lorem, ipsum dolor.</h5>
+                                <p>
+                                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis exercitationem
+                                    nam sit a nulla quidem cupiditate itaque unde reiciendis hic inventore, tenetur
+                                    asperiores quam aut cumque nesciunt voluptatibus quasi magni!
+                                </p>
+                            </div>
+                            <div class="col-6">
+                                <img class="img-fluid" src="./img/slide-1.jpg">
+                                <h5>Lorem, ipsum dolor.</h5>
+                                <p>
+                                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis exercitationem
+                                    nam sit a nulla quidem cupiditate itaque unde reiciendis hic inventore, tenetur
+                                    asperiores quam aut cumque nesciunt voluptatibus quasi magni!
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="modal-footer">
+                    <button type="button" data-dismiss="modal" class="btn btn-danger">fechar</button>
+                </div>
+
+            </div>
+        </div>
+    </div>
 
     <script src="node_modules/jquery/dist/jquery.js"></script>
     <script src="node_modules/popper.js/dist/umd/popper.js"></script>
