feature: criando nav pills, jumbotron e embed

--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
 
         <div class="row">
 
-            <div class="col-3">
+            <div class="col-sm-6 col-md-4 mb-3">
 
                 <nav id="navbarVertical" class="nav navbar-light bg-light">
 
@@ -178,7 +178,7 @@
 
             </div>
 
-            <div class="col-9">
+            <div class="col-sm-6 col-md-8">
 
                 <div data-spy="scroll" data-target="#navbarVertical" data-offset="0" class="scrollspySite">
 
@@ -219,11 +219,11 @@
 
         </div>
 
-        <div class="row mb-5 mt-5">
+        <div class="row justify-content-sm-center">
 
-            <div class="col-sm-4">
+            <div class="col-sm-6 col-md-4">
 
-                <div class="card">
+                <div class="card mb-5 mt-5">
 
                     <img class="card-img-top" src="./img/slide-1.jpg">
 
@@ -253,9 +253,9 @@
 
             </div>
 
-            <div class="col-sm-4">
+            <div class="col-sm-6 col-md-4">
 
-                <div class="card">
+                <div class="card mb-5 mt-5">
 
                     <img class="card-img-top" src="./img/slide-2.jpg">
 
@@ -285,9 +285,9 @@
 
             </div>
 
-            <div class="col-sm-4">
+            <div class="col-sm-6 col-md-4">
 
-                <div class="card">
+                <div class="card mb-5 mt-5">
 
                     <img class="card-img-top" src="./img/slide-3.jpg">
 
@@ -311,6 +311,124 @@
 
                     <div class="card-footer text-muted">
                         Lorem, ipsum dolor.
+                    </div>
+
+                </div>
+
+            </div>
+
+        </div>
+
+    </div>
+
+    <div class="jumbotron jumbotron-fluid">
+
+        <div class="container">
+
+            <div class="row">
+
+                <div class="col-12 text-center">
+                    <h1 class="display-4">Lorem ipsum dolor sit.</h1>
+                    <p class="lead">
+                        Lorem ipsum dolor sit amet, consectetur adipisicing.
+                    </p>
+                </div>
+
+            </div>
+
+            <div class="row">
+
+                <div class="col-12">
+
+                    <ul class="nav nav-pills mb-4 justify-content-center" id="pills-nav" role="tablist">
+                        <li class="link">
+                            <a class="nav-link active" id="nav-pills-01" data-toggle="pill" href="#nav-item-01">Lorem,
+                                ipsum.</a>
+                        </li>
+                        <li class="link">
+                            <a class="nav-link" id="nav-pills-02" data-toggle="pill" href="#nav-item-02">Lorem,
+                                ipsum.</a>
+                        </li>
+                        <li class="link">
+                            <a class="nav-link" id="nav-pills-03" data-toggle="pill" href="#nav-item-03">Lorem,
+                                ipsum.</a>
+                        </li>
+                    </ul>
+
+                    <div class="tab-content" id="nav-pills-content">
+
+                        <div class="tab-pane fade show active" id="nav-item-01" role="tabpanel">
+
+                            <div class="row">
+
+                                <div class="col-sm-6">
+
+                                    <div class="embed-responsive embed-responsive-16by9">
+
+                                        <iframe class="embed-responsive-item"
+                                            src="https://www.youtube.com/embed/tBRqx3HQG0o"></iframe>
+
+                                    </div>
+
+                                </div>
+
+                                <div class="col-sm-6">
+                                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ducimus maiores
+                                        temporibus hic sed earum fugiat cumque quod quisquam eligendi eaque!</p>
+                                </div>
+
+                            </div>
+
+                        </div>
+
+                        <div class="tab-pane fade" id="nav-item-02" role="tabpanel">
+
+                            <div class="row">
+
+                                <div class="col-sm-6">
+
+                                    <div class="embed-responsive embed-responsive-16by9">
+
+                                        <iframe class="embed-responsive-item"
+                                            src="https://www.youtube.com/embed/tBRqx3HQG0o"></iframe>
+
+                                    </div>
+
+                                </div>
+
+                                <div class="col-sm-6">
+                                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ducimus maiores
+                                        temporibus hic sed earum fugiat cumque quod quisquam eligendi eaque!</p>
+                                </div>
+
+                            </div>
+
+                        </div>
+
+                        <div class="tab-pane fade" id="nav-item-03" role="tabpanel">
+
+                            <div class="row">
+
+                                <div class="col-sm-6">
+
+                                    <div class="embed-responsive embed-responsive-16by9">
+
+                                        <iframe class="embed-responsive-item"
+                                            src="https://www.youtube.com/embed/tBRqx3HQG0o"></iframe>
+
+                                    </div>
+
+                                </div>
+
+                                <div class="col-sm-6">
+                                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ducimus maiores
+                                        temporibus hic sed earum fugiat cumque quod quisquam eligendi eaque!</p>
+                                </div>
+
+                            </div>
+
+                        </div>
+
                     </div>
 
                 </div>
